--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutomagIA: Soluciones con IA para Automatizar tu Empresa</title>
+    <meta name="google-site-verification" content="lS4ie4KZWwQOOk-14alpnlIcbpQTmrHionlj0Ey8RYA" />
         <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
