--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
                 <div class="contact-grid">
                     <!-- Columna del Formulario -->
                     <div class="form-column" data-aos="fade-right">
-                        <form action="#" method="POST">
+                        <form action="https://formspree.io/f/meolobrq" method="POST">
                             <div class="form-group">
                                 <label for="name">Nombre</label>
                                 <input type="text" id="name" name="name" required>
