CAMBIOS POLÍTICA DE PRIVACIDAD

--- a/contacto.html
+++ b/contacto.html
@@ -61,9 +61,14 @@
                                 <input type="email" id="email" name="email" required>
                             </div>
                             <div class="form-group">
-                                <label for="message">¿En qué podemos ayudarte?</label>
+                                <label for="message">Cuéntanos brevemente cuál es el proceso o tarea que más tiempo te consume en tu negocio</label>
                                 <textarea id="message" name="message" rows="6" required></textarea>
                             </div>
+                            <div class="form-group-checkbox">
+    <input type="checkbox" id="rgpd" name="rgpd" required>
+    <label for="rgpd">He leído y acepto la <a href="privacidad.html" target="_blank">Política de Privacidad</a>.</label>
+</div>
+
                             <button type="submit" class="cta-button">Quiero mi Solución con IA</button>
                         </form>
                     </div>
@@ -92,6 +97,7 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="privacidad.html">Privacidad</a></li>
                     </ul>
                 </nav>
             </div>
