--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <div class="container">
 <h1 class="animate-on-load"><span class="text-highlight">Automatiza <br>tu Negocio</span> y <br>Multiplica tus Resultados</h1><p class="hero-subtitle">Para negocios que quieren ESCALAR <br> sin necesidad de contratar más personal.</p>
 <!-- El botón se queda igual, ya es perfecto -->
-        <a href="#servicios" class="cta-button">
-            Descubre tu Potencial
-            <img src="images/ui/ui-arrow-cta.png" alt="Flecha hacia la derecha">
-        </a>
+        <a href="contacto.html?servicio=demo-gratuita" class="cta-button">
+            Agenda tu Demo Gratuita
+    <img src="images/ui/ui-arrow-cta.png" alt="Flecha hacia la derecha">
+</a>
     </div>
 </section>
         <!-- ====== SECCIÓN PROBLEMA/SOLUCIÓN ====== -->
@@ -143,6 +143,7 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="privacidad.html">Privacidad</a></li>
                     </ul>
                 </nav>
             </div>
