--- a/servicios.html
+++ b/servicios.html
@@ -27,6 +27,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="privacidad.html">Privacidad</a></li>
                 </ul>
             </nav>
         </div>
