--- a/index.html
+++ b/index.html
@@ -112,6 +112,103 @@
                 </div>
             </div>
         </section>
+
+                <!-- ====== SECCIÓN CÓMO TRABAJAMOS ====== -->
+        <section id="proceso" class="how-we-work" data-aos="fade-up">
+            <div class="container">
+                <h2>Nuestro Proceso Mágico en 4 Pasos</h2>
+                <p class="section-subtitle">No dejamos nada al azar. Te guiamos en un proceso claro y transparente desde la primera llamada hasta que tu negocio empieza a ahorrar tiempo y ganar eficiencia.</p>
+
+                <div class="process-grid">
+                    <!-- Paso 1 -->
+                    <div class="process-step">
+                        <div class="process-icon-container">
+                            <img src="images/icons/icon-process-diagnosis.png" alt="Icono de Diagnóstico y Hoja de Ruta" class="process-icon">
+                        </div>
+                        <h3><span>Paso 1:</span> Diagnóstico y Hoja de Ruta</h3>
+                        <p>Todo empieza en la Demo Gratuita. Entendemos tu mayor cuello de botella y te mostramos una hoja de ruta clara para solucionarlo con IA.</p>
+                    </div>
+
+                    <!-- Paso 2 -->
+                    <div class="process-step">
+                        <div class="process-icon-container">
+                             <img src="images/icons/icon-process-prototype.png" alt="Icono de Prototipo Funcional" class="process-icon">
+                        </div>
+                        <h3><span>Paso 2:</span> Prototipo Funcional en 7 Días</h3>
+                        <p>En solo una semana, construimos un prototipo funcional para que veas la magia en acción. Te entregamos una propuesta económica cerrada y sin sorpresas.</p>
+                    </div>
+
+                    <!-- Paso 3 -->
+                    <div class="process-step">
+                        <div class="process-icon-container">
+                            <img src="images/icons/icon-process-implementation.png" alt="Icono de Implementación y Entrega" class="process-icon">
+                        </div>
+                        <h3><span>Paso 3:</span> Implementación y Entrega</h3>
+                        <p>Integramos la solución en tus sistemas, formamos a tu equipo y nos aseguramos de que todo funcione a la perfección. Un servicio llave en mano.</p>
+                    </div>
+
+                    <!-- Paso 4 -->
+                    <div class="process-step">
+                        <div class="process-icon-container">
+                            <img src="images/icons/icon-process-support.png" alt="Icono de Soporte y Evolución" class="process-icon">
+                        </div>
+                        <h3><span>Paso 4:</span> Soporte y Evolución</h3>
+                        <p>No desaparecemos tras la entrega. Ofrecemos soporte continuo para resolver dudas y paquetes de mejora para que tu IA evolucione contigo.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ====== SECCIÓN DE PREGUNTAS FRECUENTES (FAQ) ====== -->
+<section id="faq" class="faq-section">
+    <div class="container">
+        <div class="faq-grid">
+            <!-- Columna de la Imagen -->
+            <div class="faq-image" data-aos="fade-right">
+                <img src="images/cyborgs/cyborg-faq.jpg" alt="AutomagIA responde tus preguntas frecuentes">
+            </div>
+
+            <!-- Columna del Acordeón -->
+            <div class="faq-content" data-aos="fade-left">
+                <h2>¿Aún tienes Dudas? <br><span class="highlight-gradient">Solo Pregunta.</span></h2>
+                <p class="section-subtitle" style="text-align: left; margin-left: 0;">Aquí respondemos a las preguntas más comunes para que tengas toda la confianza antes de dar el siguiente paso.</p>
+
+                <div class="accordion">
+                    <!-- Pregunta 1 -->
+                    <div class="faq-item">
+                        <button class="faq-question">¿Esto es muy caro? ¿Hay opciones para pymes?</button>
+                        <div class="faq-answer">
+                            <p>Nuestras soluciones no son un coste, son una inversión diseñada para pagarse sola en los primeros meses a través del ahorro de tiempo, liberación de trabajo y el aumento de la eficiencia. Ofrecemos desde paquetes de inicio para automatizaciones específicas hasta proyectos integrales, asegurando siempre que la solución sea rentable para tu negocio.</p>
+                        </div>
+                    </div>
+
+                    <!-- Pregunta 2 -->
+                    <div class="faq-item">
+                        <button class="faq-question">¿Mis datos y los de mis clientes estarán seguros?</button>
+                        <div class="faq-answer">
+                            <p>Absolutamente. La seguridad es innegociable. No construimos sobre sistemas caseros; utilizamos plataformas líderes en el mercado mundial (Make, Chatbase, Retell, HeyGen, etc.) que cumplen con los más altos estándares de seguridad y son 100% conformes al GDPR. Tus datos y los de tus clientes se tratan con la máxima confidencialidad.</p>
+                        </div>
+                    </div>
+
+                    <!-- Pregunta 3 -->
+                    <div class="faq-item">
+                        <button class="faq-question">¿Con qué herramientas y plataformas trabajáis?</button>
+                        <div class="faq-answer">
+                            <p>Somos expertos en el ecosistema de automatización líder. Esto nos permite elegir siempre la mejor herramienta para tu caso de uso específico, sin estar atados a una sola tecnología. Dominamos plataformas como Make, Zapier, ChatBase, Manychat y Retell AI, y además nos integramos con los CRM y herramientas que ya utilizas en tu negocio, creando un sistema cohesionado y sin fisuras.</p>
+                        </div>
+                    </div>
+                    
+                     <!-- Pregunta 4 -->
+                    <div class="faq-item">
+                        <button class="faq-question">¿Cuánto se tarda en tener algo funcionando?</button>
+                        <div class="faq-answer">
+                            <p>La velocidad es una de nuestras señas de identidad. Gracias a nuestro 'Proceso Mágico en 4 Pasos', puedes tener un prototipo funcional, gratuito y sin compromiso para validar en tan solo 7 días. La implementación completa varía según la complejidad, pero siempre recibirás una hoja de ruta con plazos cerrados y realistas desde el principio.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
             <!-- ====== SECCIÓN CTA FINAL ====== -->
         <section id="cta" class="cta-section">
             <div class="container">
