--- a/contacto.html
+++ b/contacto.html
@@ -98,6 +98,8 @@
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                         <li><a href="privacidad.html">Privacidad</a></li>
+                        <li><a href="aviso-legal.html">Aviso Legal</a></li>
+        <li><a href="politica-cookies.html">Cookies</a></li>
                     </ul>
                 </nav>
             </div>
