--- a/privacidad.html
+++ b/privacidad.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutomagIA: Política de Privacidad</title>
+    <link rel="canonical" href="https://automagia.netlify.app/privacidad.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
