Implementar metaetiquetas SEO On-Page

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Soluciones con IA para Automatizar tu Empresa</title>
+<title>Contacto - Agenda una Demo Gratuita | AutomagIA</title>
+<meta name="description" content="¿Listo para transformar tu negocio? Rellena el formulario o agenda una demo gratuita de 15 minutos en nuestro Calendly y descubre el potencial de la IA." />
+<meta name="keywords" content="contactar AutomagIA, agendar demo IA, solicitar presupuesto automatización, consultoría IA" />
     <link rel="canonical" href="https://automagia.netlify.app/contacto.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
         <!-- Google Fonts -->
