--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Soluciones con IA para Automatizar tu Empresa</title>
+<title>AutomagIA: Soluciones con IA para Automatizar y Escalar tu Negocio</title>
+<meta name="description" content="Automatiza tareas, atiende llamadas 24/7 y captura más leads. En AutomagIA creamos soluciones de IA a medida para que las pymes escalen sin aumentar costes." />
+<meta name="keywords" content="automatización con IA, agentes de voz, chatbots para pymes, ahorrar tiempo, escalar negocio, inteligencia artificial para empresas" />
     <link rel="canonical" href="https://automagia.netlify.app/index.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
         <!-- Google Fonts -->
