--- a/privacidad.html
+++ b/privacidad.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Política de Privacidad</title>
+    <title>Política de Privacidad | AutomagIA</title>
+<meta name="description" content="Consulta nuestra Política de Privacidad para entender cómo recopilamos, usamos y protegemos tus datos personales en AutomagIA." />
     <link rel="canonical" href="https://automagia.netlify.app/privacidad.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
     <!-- Google Fonts -->
