--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Aviso Legal</title>
+    <title>Aviso Legal | AutomagIA</title>
+<meta name="description" content="Información legal y de titularidad del sitio web de AutomagIA, de conformidad con la LSSI." />
     <link rel="canonical" href="https://automagia.netlify.app/aviso-legal.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
     <!-- Google Fonts -->
