--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Política de Cookies</title>
+    <title>Política de Cookies | AutomagIA</title>
+<meta name="description" content="Información sobre el uso de cookies en el sitio web de AutomagIA para mejorar la experiencia del usuario." />
     <link rel="canonical" href="https://automagia.netlify.app/politica-cookies.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
     <!-- Google Fonts -->
