--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutomagIA: Soluciones con IA para Automatizar tu Empresa</title>
+<title>Servicios de Automatización con IA | AutomagIA</title>
+<meta name="description" content="Descubre nuestros servicios: Automatización de procesos, Agentes de Voz con IA para no perder llamadas, Chatbots 24/7 para capturar leads y Avatares Digitales." />
+<meta name="keywords" content="servicios de automatización IA, agentes telefónicos IA, chatbots 24/7, avatares digitales, automatizar procesos, atención al cliente con IA" />
     <link rel="canonical" href="https://automagia.netlify.app/servicios.html" />
     <meta name="google-site-verification" content="heDx9HaAaaFUH-19gsVBbKuzvXWL2zZ9O0Q7KA1OuzI" />
         <!-- Google Fonts -->
